--- a/Asp_Net_MVC_5/Views/web.config
+++ b/Asp_Net_MVC_5/Views/web.config
@@ -25,6 +25,10 @@
     <add key="webpages:Enabled" value="false" />
   </appSettings>
 
+  <connectionStrings>
+    <add name="Asp_Net_MVC_CS" connectionString="DESKTOP-4NDK4P9\SQLEXPRESS;AttachDbFilename=|DataDirectory|\Asp_Net_MVC_DB.mdf;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  
   <system.webServer>
     <handlers>
       <remove name="BlockViewHandler"/>
