Criado novo Controlador para o modelo de Fabricante e implementado View para Action Index
Criado novo Controlador para o modelo de Fabricante e implementado View para Action Index

--- a/Asp_Net_MVC_5/Asp_Net_MVC_5.csproj
+++ b/Asp_Net_MVC_5/Asp_Net_MVC_5.csproj
@@ -113,10 +113,12 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\CategoriasController.cs" />
+    <Compile Include="Controllers\FabricantesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Categoria.cs" />
+    <Compile Include="Models\Context.cs" />
     <Compile Include="Models\Fabricante.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -125,6 +127,7 @@
     <None Include="packages.config" />
     <Content Include="Views\Categorias\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Fabricantes\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
