--- a/Asp_Net_MVC_5/Web.config
+++ b/Asp_Net_MVC_5/Web.config
@@ -16,6 +16,9 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+    <add name="Asp_Net_MVC_CS" connectionString="DataSource=DESKTOP-4NDK4P9\SQLEXPRESS;AttachDbFilename=|DataDirectory|\Asp_Net_MVC_DB.mdf;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
